@@ -429,6 +429,7 @@ int CommandExists(char *name);
 #define HOOKTYPE_LOCAL_QUIT	1
 #define HOOKTYPE_LOCAL_NICKCHANGE 2
 #define HOOKTYPE_LOCAL_CONNECT 3
+#define HOOKTYPE_REHASHFLAG 4
 #undef HOOKTYPE_SCAN_INFO
 #define HOOKTYPE_CONFIGPOSTTEST 6
 #define HOOKTYPE_REHASH 7
